Add a base version of the project